NXBT-582 - cleanup, format, close leaked resources